Add missing return data for most endpoints. Now requires #233
